# SlurmDataMover

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  poco.patch
PeerToPeer/: CMakeLists.txt  color.h
PeerToPeer/client/: PeerClient.cpp  PeerClient.h  README.md  getData.cpp  getData.h
PeerToPeer/server/: CMakeLists.txt  PeerServer.cpp  PeerServer.h  startServer.cpp  startServer.h
PeerToPeer/src/: color.h
PeerToPeer/src/Client/: CMakeLists.txt  PeerClient.cpp  PeerClient.h  README.md  getData.h
PeerToPeer/src/server/: README.md  startServer.cpp  startServer.h
docker/: Makefile  compose.yml
examle_workflow/: PREDICT.sh  transformImages.sh
example_workflow/: TRAIN.sh  basic_script.sh  clean.sh  mnist-nn-data-parallelism.py  predict.py  stage1.py  transformImages.py  workflow.py
src/: .ClientOps.cpp.kate-swp  Bulk.cpp  Bulk.h  BulkServer.cpp  BulkServer.h  ClientOps.cpp  ClientOps.h  File.cpp  File.h  JSONable.h  Log.cpp  Log.h  Node.cpp  Node.h  NodeOps.cpp  NodeOps.h  NodeServer.cpp  NodeServer.h  Redis.cpp  Redis.h  Slurm.cpp  Slurm.h  Utils.cpp  Utils.h  WebUi.cpp  WebUi.h  main.cpp
